--- a/phonebutton.html
+++ b/phonebutton.html
@@ -15,7 +15,7 @@
 }
 
 .buttonRed {
-    {background-color: #f44336; /* Red */
+    background-color: #f44336; /* Red */
     border: none;
     color: white;
     padding: 15px 32px;
