--- a/phonebutton.html
+++ b/phonebutton.html
@@ -39,7 +39,7 @@ function toggle () {
   // Change the button text to 'status'
   document.getElementById("b").classList.toggle("buttonGreen");
   document.getElementById("b").classList.toggle("buttonRed");
-  document.getElementById("b").innerHtml = status;
+  document.getElementById("b").innerText = status;
 }
 </script>
 </head>
