--- a/phonebutton.html
+++ b/phonebutton.html
@@ -2,10 +2,10 @@
 <head>
 <style>
 .button {
-    background-color: #555555; /* Black */
+    background-color: #4CAF50; /* Green */
     border: none;
     color: white;
-    padding: 0px 0px;
+    padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
