--- a/phonebutton.html
+++ b/phonebutton.html
@@ -107,6 +107,6 @@ document.getElementById("b").innerText = getAllUrlParams().text;
 </script>
 </head>
 <body>
-<button id="b" class="button" onclick="toggle();">Join</button>
+<button id="b" class="buttonGreen" onclick="toggle();">Join</button>
 </body>
 </html>
