--- a/phonebutton.html
+++ b/phonebutton.html
@@ -62,7 +62,7 @@ function getAllUrlParams(url) {
 
       // (optional) keep case consistent
       paramName = paramName.toLowerCase();
-      paramValue = paramValue.toLowerCase();
+      //paramValue = paramValue.toLowerCase();
 
       // if parameter name already exists
       if (obj[paramName]) {
