--- a/phonebutton.html
+++ b/phonebutton.html
@@ -106,10 +106,12 @@ var t = "Join";
 if (getAllUrlParams().text != "") {
     t = getAllUrlParams().text;
 }
-document.getElementById("b").innerText = t;
 </script>
 </head>
 <body>
 <button id="b" class="buttonGreen" onclick="toggle();">Join</button>
+<script>
+    document.getElementById("b").innerText = t;
+</script>
 </body>
 </html>
