--- a/onthedotchooser.html
+++ b/onthedotchooser.html
@@ -1,9 +1,11 @@
 <html>
 <head><Title>On the Dot</Title></head>
 <body>
+<b>On the Dot</b>
 <select>
-<option>Kent, Chris</option>
-<option>Boyle, Chuck</option>
+	<option>Kent, Chris</option>
+	<option>Boyle, Chuck</option>
+	<option>Fairbanks, Jamie</option>
 </select>
 </body>
 </html>
