--- a/phonebutton.html
+++ b/phonebutton.html
@@ -114,5 +114,6 @@ window.onload = function() {
 </head>
 <body>
 <button id="b" class="buttonGreen" onclick="toggle();">Join</button>
+    <a href="http://10.0.2.45:3000/">Next Gen</a>
 </body>
 </html>
