--- a/phonebutton.html
+++ b/phonebutton.html
@@ -1,119 +1,8 @@
 <html>
 <head>
-<style>
-.buttonGreen {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-
-.buttonRed {
-    background-color: #f44336;  /* Red */ 
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-
-</style>
-<script>
-function getAllUrlParams(url) {
-
-  // get query string from url (optional) or window
-  var queryString = url ? url.split('?')[1] : window.location.search.slice(1);
-
-  // we'll store the parameters here
-  var obj = {};
-
-  // if query string exists
-  if (queryString) {
-
-    // stuff after # is not part of query string, so get rid of it
-    queryString = queryString.split('#')[0];
-
-    // split our query string into its component parts
-    var arr = queryString.split('&');
-
-    for (var i=0; i<arr.length; i++) {
-      // separate the keys and the values
-      var a = arr[i].split('=');
-
-      // in case params look like: list[]=thing1&list[]=thing2
-      var paramNum = undefined;
-      var paramName = a[0].replace(/\[\d*\]/, function(v) {
-        paramNum = v.slice(1,-1);
-        return '';
-      });
-
-      // set parameter value (use 'true' if empty)
-      var paramValue = typeof(a[1])==='undefined' ? true : a[1];
-
-      // (optional) keep case consistent
-      paramName = paramName.toLowerCase();
-      //paramValue = paramValue.toLowerCase();
-
-      // if parameter name already exists
-      if (obj[paramName]) {
-        // convert value to array (if still string)
-        if (typeof obj[paramName] === 'string') {
-          obj[paramName] = [obj[paramName]];
-        }
-        // if no array index number specified...
-        if (typeof paramNum === 'undefined') {
-          // put the value on the end of the array
-          obj[paramName].push(paramValue);
-        }
-        // if array index number specified...
-        else {
-          // put the value at that index number
-          obj[paramName][paramNum] = paramValue;
-        }
-      }
-      // if param name doesn't exist yet, set it
-      else {
-        obj[paramName] = paramValue;
-      }
-    }
-  }
-
-  return obj;
-}
-    
-
-function toggle () {
-  var b = document.getElementById("b");
-  if (b.className == "buttonGreen") {
-    //b.innerText = "Leave";
-    b.className = "buttonRed";
-  } else {
-    //b.innerText = "Join";
-    b.className = "buttonGreen";
-  }
-}
-var t = "Join";
-window.onload = function() {
-    var tt = getAllUrlParams().text;
-    if (tt != null) {
-        t = tt;
-    }
-    document.getElementById("b").innerText = t;
-};
-</script>
+    <title>Phone Controller</title>
 </head>
 <body>
-<button id="b" class="buttonGreen" onclick="toggle();">Join</button>
-    <a href="http://10.0.2.45:3000/">Next Gen</a>
+<a href="http://10.0.2.134:4000/">Next Gen</a>
 </body>
 </html>
