--- a/phonebutton.html
+++ b/phonebutton.html
@@ -3,9 +3,11 @@
     <title>Phone Controller</title>
 </head>
 <body>
-<a href="http://10.0.2.20:4000/#9710">9710</a>
-<a href="http://10.0.2.20:4000/#9720">9730</a>
-<a href="http://10.0.2.20:4000/#9730">9730</a>
-<a href="http://10.0.2.20:4000/#9740">9740</a>
+    <ul>
+        <li><a href="http://10.0.2.20:4000/#9710">9710</a></li>
+        <li><a href="http://10.0.2.20:4000/#9720">9730</a></li>
+        <li><a href="http://10.0.2.20:4000/#9730">9730</a></li>
+        <li><a href="http://10.0.2.20:4000/#9740">9740</a></li>
+    </ul>
 </body>
 </html>
