Moving to production server.

--- a/phonebutton.html
+++ b/phonebutton.html
@@ -4,10 +4,10 @@
 </head>
 <body>
     <ul>
-        <li><a href="http://10.0.2.20:4000/#9710">9710</a></li>
-        <li><a href="http://10.0.2.20:4000/#9720">9730</a></li>
-        <li><a href="http://10.0.2.20:4000/#9730">9730</a></li>
-        <li><a href="http://10.0.2.20:4000/#9740">9740</a></li>
+        <li><a href="http://srvwebnode3:4000/#9710">9710</a></li>
+        <li><a href="http://srvwebnode3:4000/#9720">9730</a></li>
+        <li><a href="http://srvwebnode3:4000/#9730">9730</a></li>
+        <li><a href="http://srvwebnode3:4000/#9740">9740</a></li>
     </ul>
 </body>
 </html>
